--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,14 @@
  *= require_tree .
  *= require_self
  */
+
+ .pato{
+  width: 50vw;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+ }
+
+ .viewing{
+  height: calc(100vh - 56px);
+ }
